2003-10-22  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* library/dialog.tcl (tk_dialog): Constrain the dialog to be
	fairly sensibly sized and placed.  [Bug 827535]

2003-10-15  Joe English  <jenglish@users.sourceforge.net>
	* unix/tkUnixWm.c, tests/unixWm.test: Delete WM_TRANSIENT_FOR
	property instead of setting it to None when making a window
	nontransient [Bug #632816 "cannot remove transient"]

2003-10-14  Joe English  <jenglish@users.sourceforge.net>
	* unix/tkUnixPort.h(TkPutImage): changed macro argument names
	to match function argument names ('dest' and 'src' were
	swapped, which was confusing) [GPS]

2003-10-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc:  Applied patches from tcl bug #801467 from
	* win/winMain.c:    Joe Mistachkin

2003-10-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkInt.h:	move TkGetOptionSpec to stubs intDecls
	* generic/tkIntDecls.h:
	* generic/tkInt.decls:
	* generic/tkStubInit.c:
	* tkDecls.h:		updated with latest genstubs
	* tkIntPlatDecls.h:
	* tkIntXlibDecls.h:
	* tkPlatDecls.h:

	* tests/listbox.test (13.3): correct result size
	(4.7): correct test for possible window drift [Bug #701931] (dgp)

	* unix/mkLinks:
	* doc/GetHWND.3: add Tk_AttachHWND docs [Bug #220803]

2003-10-10  Jeff Hobbs	<jeffh@ActiveState.com>

	* mac/tkMacButton.c (TkpDisplayButton):
	* macosx/tkMacOSXButton.c (TkpDisplayButton):
	* unix/tkUnixButton.c (TkpDisplayButton): correct imageYOffset for
	buttons with just images.

2003-10-10  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tkObj.c (TkRegisterObjTypes): Register the type of text
	indexes.

2003-10-09  Jeff Hobbs	<jeffh@ActiveState.com>

	* win/tkWinButton.c (TkpDisplayButton): correct imageYOffset for
	buttons with just images.

2003-10-08  Pat Thoyts	<patthoyts@users.sourceforge.net>

	* win/tcl.m4:	      Add TIP #150 items to the TEA makefiles.
	* win/configure:
	* win/Makefile.in:

	* win/tkWinSend.c:    Clean up some warnings from gcc -Wall.